# HoloAssist-NF

./: .gitignore  README.md  index.html  pyproject.toml
holo/: __init__.py  config.py  data.py  evaluate.py  extract.py  features.py  fetch.py  model.py  replay.py  report.py  train.py
results/: metrics.json  model.pt
